--- a/date/2024-03/page-4.htm
+++ b/date/2024-03/page-4.htm
@@ -5,8 +5,10 @@
         <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>免费节点 - Clash Node演示站 - 第4页</title>
+    <title>2024-03归档 - Clash Node演示站</title>
     <link rel="icon" href="/assets/addons/xcblog/img/clashnode/favicon.ico" type="image/x-icon"/>
+        <meta name="keywords" content="2024-03归档" />
+        <meta name="description" content="2024-03归档" />
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/addons/xcblog/css/clashnode/style-starter.css">
     <!-- Google tag (gtag.js) -->
@@ -72,10 +74,10 @@
     <section class="w3l-about-breadcrumb text-center">
         <div class="breadcrumb-bg breadcrumb-bg-about py-sm-5 py-4">
             <div class="container py-2">
-                <h1 class="title">免费节点</h1>
+                <h1 class="title">2024-03 归档</h1>
                 <ul class="breadcrumbs-custom-path mt-2">
                     <li><a href="/">首页</a></li>
-                    <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> 免费节点</li>
+                    <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> 2024-03 归档</li>
                 </ul>
             </div>
         </div>
@@ -87,124 +89,22 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
-                            <a href="/free-nodes/2024-2-20-free-clash.htm">
-                                <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="2月20日19.2M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
+                            <a href="/free-nodes/2024-3-1-clash-node-daily-updates.htm">
+                                <img src="https://clashnode.github.io/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="3月1日18.5M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-20-free-clash.htm">
-                            <h3 class="title-big">2月20日19.2M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</h3>
+                        <a href="/free-nodes/2024-3-1-clash-node-daily-updates.htm">
+                            <h3 class="title-big">3月1日18.5M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</h3>
                         </a>
-                        <p class="mt-4">这一次的节点更新覆盖了美国、日本、韩国、香港、加拿大、新加坡、欧洲等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="mt-4">这一次的节点更新覆盖了美国、韩国、香港、新加坡、加拿大、日本、欧洲等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         <p class="title-small mb-2 pull-right">
-                            2月20日                        </p>
-                    </div>
-                </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-19-free-node-subscribe-links.htm">
-                                <img src="/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="2月19日20M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-19-free-node-subscribe-links.htm">
-                            <h3 class="title-big">2月19日20M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了美国、韩国、新加坡、日本、香港、欧洲、加拿大等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月19日                        </p>
-                    </div>
-                </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-18-clash-windows.htm">
-                                <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-18-clash-windows.htm">
-                            <h3 class="title-big">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、韩国、香港、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月18日                        </p>
-                    </div>
-                </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-17-free-node-subscribe.htm">
-                                <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-17-free-node-subscribe.htm">
-                            <h3 class="title-big">2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了香港、加拿大、新加坡、美国、韩国、欧洲、日本等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月17日                        </p>
-                    </div>
-                </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-16-clash-v2ray-ss-ssr.htm">
-                                <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="2月16日20.4M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-16-clash-v2ray-ss-ssr.htm">
-                            <h3 class="title-big">2月16日20.4M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了美国、日本、欧洲、加拿大、香港、新加坡、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月16日                        </p>
-                    </div>
-                </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-15-node-share-links.htm">
-                                <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-15-node-share-links.htm">
-                            <h3 class="title-big">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、加拿大、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月15日                        </p>
-                    </div>
-                </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
-                                <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
-                            <h3 class="title-big">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了香港、韩国、新加坡、欧洲、加拿大、美国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月14日                        </p>
+                            3月1日                        </p>
                     </div>
                 </div>
                 
-                <ul class="pagination"><li><a href="/free-nodes/page-4.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li class="active"><span>5</span></li> <li class="disabled"><span>&raquo;</span></li></ul>            </div>
+                <ul class="pagination"><li><a href="/date/2024-03/page-3.htm">&laquo;</a></li> <li><a href="/date/2024-03/">1</a></li><li><a href="/date/2024-03/page-2.htm">2</a></li><li><a href="/date/2024-03/page-3.htm">3</a></li><li class="active"><span>4</span></li> <li class="disabled"><span>&raquo;</span></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
 <div class="row w3l-achievements">
